adjusting annotations, test fixes
Signed-off-by: Philipp Etschel <philipp.etschel@ch.bosch.com>